# Todolist

./: .flake8  README.md  bandit.yml  main.py  pyproject.toml  requirements.txt  todo-test.py  todooperations.py
.github/workflows/: ci-cd.yml
tests/: test-todo.py
